Fix Emoji picker cut off at RHS (#6602)

--- a/webapp/sass/layout/_post-right.scss
+++ b/webapp/sass/layout/_post-right.scss
@@ -148,7 +148,6 @@
 .post-right__scroll {
     -webkit-overflow-scrolling: touch;
     @include flex(1 1 auto);
-    overflow: auto;
     padding-top: 10px;
     position: relative;
 
